--- a/conf/base.config
+++ b/conf/base.config
@@ -15,7 +15,7 @@ process {
   	memory = {64.GB * task.attempt }
   	time = { 1.h * task.attempt }
   }
-   withName: multiTraitLMM {
+   withName: runGWAS {
    cpus = { 1 * task.attempt }
    memory = {32.GB * task.attempt }
    time = { 1.h * task.attempt }
