set is deprecated; use tuple instead

--- a/conf/base.config
+++ b/conf/base.config
@@ -5,7 +5,7 @@
  */
 
 process {
-  withName: readPhenotypes {
+  withName: scatterPhenotypes {
   	cpus = { 1 * task.attempt }
   	memory = {1.GB * task.attempt }
   	time = { 1.h * task.attempt }
