--- a/conf/base.config
+++ b/conf/base.config
@@ -7,22 +7,25 @@
 process {
   withName: scatterPhenotypes {
   	cpus = { 1 * task.attempt }
-  	memory = {1.GB * task.attempt }
+  	memory = { 1.GB * task.attempt }
   	time = { 1.h * task.attempt }
   }
   withName: filterGenotypes {
     cpus = { 1 * task.attempt }
-  	memory = {64.GB * task.attempt }
+  	memory = { 64.GB * task.attempt }
   	time = { 1.h * task.attempt }
   }
    withName: runGWAS {
    cpus = { 1 * task.attempt }
-   memory = {32.GB * task.attempt }
-   time = { 1.h * task.attempt }
+   memory = { 32.GB * task.attempt }
+   time = { 2.h * task.attempt }
   }
   withName: plotGWAS {
     cpus = { 1 * task.attempt }
-  	memory = {2.GB * task.attempt }
+  	memory = { 2.GB * task.attempt }
   	time = { 1.h * task.attempt }
-  }  
+  }
+  errorStrategy = { ( task.exitStatus == 143 || task.exitStatus == 137 ) ? 'retry' : 'finish' }
+  maxRetries = 3
+  maxErrors = '-1'
 }
