--- a/conf/cbe.config
+++ b/conf/cbe.config
@@ -3,7 +3,10 @@
  * -------------------------------------------------
  */
 
+singularity.enabled = true
+
 process {
+  container = 'docker.artifactory.imp.ac.at/becker/gwas-nf:dev'
   executor = 'slurm'
-  module = 'anaconda3/2019.03'
+  module = 'singularity/3.2.1'
 }
