--- a/conf/cbe.config
+++ b/conf/cbe.config
@@ -9,4 +9,6 @@ process {
   container = 'docker.artifactory.imp.ac.at/becker/gwas-nf:dev'
   executor = 'slurm'
   module = 'singularity/3.2.1'
+  queue = { task.memory <= 170.GB ? 'c' : 'm' }
+  clusterOptions = { task.time <= 8.h ? '--qos short': task.time <= 48.h ? '--qos medium' : '--qos long' }
 }
