enable nf-tower

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,20 @@ profiles {
   conda { process.conda = "$baseDir/environment.yml" }
 }
 
+manifest {
+    homePage = 'https://github.com/Gregor-Mendel-Institute/GWAS-nf'
+    description = "A nextflow pipeline to run genome wide association studies using limix "
+    name = 'GWAS-nf'
+    version = '0.1'
+    mainScript = 'main.nf'
+    nextflowVersion = '>=19.10.0'
+}
+
+tower {
+  accessToken = '381521ad7b481979918df52d245e904e31a42cb4'
+  enabled = true
+}
+
 timeline {
   enabled = true
   file = "${params.outdir}/execution_timeline.html"
