--- a/conf/cbe.config
+++ b/conf/cbe.config
@@ -3,12 +3,17 @@
  * -------------------------------------------------
  */
 
-singularity.enabled = true
+params.genotype  = "/scratch-cbe/shared/genotypes_for_pygwas/1.0.0/1001genomes/all_chromosomes_binary.hdf5"
+
+singularity {
+  enabled = true
+  cacheDir = '/resources/containers'
+}
 
 process {
   container = 'docker.artifactory.imp.ac.at/becker/gwas-nf:dev'
   executor = 'slurm'
-  module = 'singularity/3.2.1'
+  module = 'singularity/3.4.1'
   queue = { task.memory <= 170.GB ? 'c' : 'm' }
   clusterOptions = { task.time <= 8.h ? '--qos short': task.time <= 48.h ? '--qos medium' : '--qos long' }
 }
