--- a/nextflow.config
+++ b/nextflow.config
@@ -6,12 +6,11 @@
  */
 
 params.outdir = "./results"
-params.genotype  = "/groups/becker/projects/becker_common/software/genotypes/1.0.0/1001genomes/all_chromosomes_binary.pkl.xz"
-params.kinship  = "/groups/becker/projects/becker_common/software/genotypes/1.0.0/1001genomes/kinship_ibs_binary_mac5.pkl.xz"
-params.phenotype = "/groups/becker/projects/becker_common/software/mtl/gwas-nf/test/*csv"
 params.mac = 5
-params.singletrait = false
-params.alpha = 0.05
+params.transform = "mean_standardize"
+params.multitrait = false
+params.pthresh = 0.05
+params.trait = false
 
 includeConfig 'conf/base.config'
 
@@ -29,12 +28,7 @@ manifest {
     name = 'GWAS-nf'
     version = '0.1'
     mainScript = 'main.nf'
-    nextflowVersion = '>=19.10.0'
-}
-
-tower {
-  accessToken = '381521ad7b481979918df52d245e904e31a42cb4'
-  enabled = true
+    nextflowVersion = '>=20.01.0'
 }
 
 timeline {
@@ -48,8 +42,4 @@ report {
 trace {
   enabled = true
   file = "${params.outdir}/execution_trace.txt"
-}
-dag {
-  enabled = true
-  file = "${params.outdir}/pipeline_dag.svg"
 }
