--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,7 @@ params.transform = "mean_standardize"
 params.multitrait = false
 params.pthresh = 0.05
 params.trait = false
+params.locus = false
 
 includeConfig 'conf/base.config'
 
