change input format to bed
these changes are specific to analysis of the Arabidopsis 1001methylomes panel

It takes differentially methylated regions as obtained from MethylScore, retrieves
mean methylation rates in these regions for each accession, and then runs GWAS jobs, taking
the rates as a phenotype vector

--- a/conf/base.config
+++ b/conf/base.config
@@ -5,22 +5,22 @@
  */
 
 process {
-  container = 'beckerlab/beckerlab-gwas-nf:master'
+  container = 'gitlab.lrz.de:5005/beckerlab/gwas-nf:1001methylomes'
 
-  withName: scatterPhenotypes {
-  	cpus = { 1 * task.attempt }
-  	memory = { 1.GB * task.attempt }
-  	time = { 1.h * task.attempt }
+  withName: retrieveRates {
+  	cpus = { 4 * task.attempt }
+  	memory = { 4.GB * task.attempt }
+  	time = { 2.h * task.attempt }
   }
   withName: filterGenotypes {
-    cpus = { 1 * task.attempt }
-  	memory = { 32.GB * task.attempt }
-  	time = { 1.h * task.attempt }
+    cpus = { 2 * task.attempt }
+  	memory = { 40.GB * task.attempt }
+  	time = { 2.h * task.attempt }
   }
    withName: runGWAS {
    cpus = { 2 * task.attempt }
-   memory = { 32.GB * task.attempt }
-   time = { 8.h * task.attempt }
+   memory = { 55.GB * task.attempt }
+   time = { 4.h * task.attempt }
   }
   withName: plotGWAS {
     cpus = { 1 * task.attempt }
