--- a/nextflow.config
+++ b/nextflow.config
@@ -6,12 +6,10 @@
  */
 
 params.outdir = "./results"
-params.genotype = "$baseDir/genotypes/1001genomes.hdf5"
-params.mac = 5
+params.mac = 10
 params.transform = "mean_standardize"
-params.multitrait = false
 params.pthresh = 0.05
-params.trait = false
+params.covthresh = 5
 params.locus = false
 
 // options for kinship calculation
