add charliecloud profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,7 @@
  */
 
 params.outdir = "./results"
+params.genotype = "$baseDir/genotypes/1001genomes.hdf5"
 params.mac = 5
 params.transform = "mean_standardize"
 params.multitrait = false
@@ -18,13 +19,14 @@ includeConfig 'conf/base.config'
 profiles {
   local { process.executor = 'local' }
   cbe { includeConfig 'conf/cbe.config' }
+  charliecloud { includeConfig 'conf/charliecloud.config' }
   singularity { singularity.enabled = true }
   docker { docker.enabled = true }
   conda { process.conda = "$baseDir/environment.yml" }
 }
 
 manifest {
-    homePage = 'https://github.com/Gregor-Mendel-Institute/GWAS-nf'
+    homePage = 'https://gitlab.lrz.de/beckerlab/GWAS-nf'
     description = "A nextflow pipeline to run genome wide association studies using limix "
     name = 'GWAS-nf'
     version = '0.1'
