--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 build_image:
   variables:
-    - IMAGE_TAG: $CI_PROJECT_PATH_SLUG:$CI_COMMIT_REF_SLUG
+    IMAGE_TAG: $CI_PROJECT_PATH_SLUG:$CI_COMMIT_REF_SLUG
   script:
     - docker build --tag $IMAGE_TAG .
     - docker push $IMAGE_TAG
