--- a/conf/base.config
+++ b/conf/base.config
@@ -5,6 +5,8 @@
  */
 
 process {
+  container = 'beckerlab/beckerlab-gwas-nf:latest'
+
   withName: scatterPhenotypes {
   	cpus = { 1 * task.attempt }
   	memory = { 1.GB * task.attempt }
