--- a/nextflow.config
+++ b/nextflow.config
@@ -31,7 +31,7 @@ manifest {
     name = 'GWAS-nf'
     version = '0.1'
     mainScript = 'main.nf'
-    nextflowVersion = '>=20.01.0'
+    nextflowVersion = '>=20.12.0-edge'
 }
 
 timeline {
