refactor kinship estimation
this adds 2 parameters to control how the kinship is calculated

* `--kinship_from_all_markers` (default: true)
if set to true, all markers in the SNP matrix are used and the resulting
covariance matrix is subset to those accessions that have phenotype
information afterwards.
if set to false, kinship is estimated after MAC filtering and only SNPs
between accessions that have phenotype information are used for
calculation

* `--normalise_covariance` (default: false)
if set to true, gower rescaling is applied to the covariance matrix

--- a/conf/base.config
+++ b/conf/base.config
@@ -5,7 +5,7 @@
  */
 
 process {
-  container = 'beckerlab/beckerlab-gwas-nf:latest'
+  container = 'beckerlab/beckerlab-gwas-nf:master'
 
   withName: scatterPhenotypes {
   	cpus = { 1 * task.attempt }
