--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,15 @@ params.pthresh = 0.05
 params.trait = false
 params.locus = false
 
+// options for kinship calculation
+
+// if set to true, all markers are used to estimate kinship and a subset based on the presence of phenotypes is generated from the resulting covariance matrix
+// if set to false, only markers left after mac filtering and removing accessions without phenotype are used for kinship estimation  
+params.kinship_from_all_markers = true
+
+// if set to true, applies gower scaling to the covariance matrix
+params.normalise_covariance = false
+
 includeConfig 'conf/base.config'
 
 profiles {
@@ -31,7 +40,7 @@ manifest {
     name = 'GWAS-nf'
     version = '0.1'
     mainScript = 'main.nf'
-    nextflowVersion = '>=20.12.0-edge'
+    nextflowVersion = '>=20.01.0'
 }
 
 timeline {
