--- a/nextflow.config
+++ b/nextflow.config
@@ -27,10 +27,12 @@ includeConfig 'conf/base.config'
 
 profiles {
   local { process.executor = 'local' }
+  test { includeConfig 'conf/test.config' }
   cbe { includeConfig 'conf/cbe.config' }
   charliecloud { includeConfig 'conf/charliecloud.config' }
   singularity { singularity.enabled = true }
   docker { docker.enabled = true }
+  podman { podman.enabled = true }
   conda { process.conda = "$baseDir/environment.yml" }
 }
 
