--- a/conf/cbe.config
+++ b/conf/cbe.config
@@ -11,6 +11,7 @@ singularity {
 }
 
 process {
+  container = 'docker.artifactory.imp.ac.at/becker/gwas-nf:1001methylomes'
   executor = 'slurm'
   queue = { task.memory <= 170.GB ? 'c' : 'm' }
   clusterOptions = { task.time <= 8.h ? '--qos short': task.time <= 48.h ? '--qos medium' : '--qos long' }
