--- a/nextflow.config
+++ b/nextflow.config
@@ -28,21 +28,22 @@ includeConfig 'conf/base.config'
 profiles {
   local { process.executor = 'local' }
   test { includeConfig 'conf/test.config' }
-  cbe { includeConfig 'conf/cbe.config' }
   charliecloud { includeConfig 'conf/charliecloud.config' }
   singularity { singularity.enabled = true }
   docker { docker.enabled = true }
   podman { podman.enabled = true }
   conda { process.conda = "$baseDir/environment.yml" }
+  cbe { includeConfig 'conf/cbe.config' }
+  biohpc_gen { includeConfig 'conf/biohpc_gen.config' }
 }
 
 manifest {
     homePage = 'https://gitlab.lrz.de/beckerlab/GWAS-nf'
-    description = "A nextflow pipeline to run genome wide association studies using limix "
+    description = "A nextflow pipeline to run genome wide association studies using limix"
     name = 'GWAS-nf'
     version = '0.1'
     mainScript = 'main.nf'
-    nextflowVersion = '>=20.01.0'
+    nextflowVersion = '>=20.10.0'
 }
 
 timeline {
