--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,8 @@
 name: gwas
 channels:
   - conda-forge
-  - bioconda
   - defaults
 dependencies:
-  - limix=3.0.4
-  - pandas=1.0.5
-  - pyarrow=1.0.1
+  - conda-forge::limix=3.0.4
+  - conda-forge::pandas=1.0.5
+  - conda-forge::pyarrow=3.0.0
