change to filtering based on allele freq rather than count
defaults to 5% minor allele frequency

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@
 
 params.outdir = "./results"
 params.genotype = "$baseDir/genotypes/1001genomes.hdf5"
-params.mac = 5
+params.maf = 0.05
 params.transform = "mean_standardize"
 params.multitrait = false
 params.pthresh = 0.05
