--- a/conf/biohpc_gen.config
+++ b/conf/biohpc_gen.config
@@ -3,10 +3,17 @@
  * ----------------------------------------------------
  */
 
+env {
+  SLURM_CLUSTERS='biohpc_gen'
+}
+
 process {
-  beforeScript = 'module use /dss/dssfs01/pr53da/pr53da-dss-0000/spack/modules/x86_avx2/linux*'
-  module = 'charliecloud/0.22:miniconda3'
   executor = 'slurm'
-  queue = { task.memory <= 120.GB ? 'biohpc_gen_normal' : 'biohpc_gen_highmem' }
-  clusterOptions = '-M biohpc_gen'
+  queue = { task.memory <= 1536.GB ? (task.time > 2.d || task.memory > 384.GB ? 'biohpc_gen_production' : 'biohpc_gen_normal') : 'biohpc_gen_highmem' }
+  beforeScript = 'module use /dss/dsslegfs02/pn73se/pn73se-dss-0000/spack/modules/x86_avx2/linux*'
+  module = 'charliecloud/0.22:miniconda3'
+}
+
+charliecloud {
+  enabled = true
 }
