--- a/nextflow.config
+++ b/nextflow.config
@@ -28,7 +28,7 @@ includeConfig 'conf/base.config'
 profiles {
   local { process.executor = 'local' }
   test { includeConfig 'conf/test.config' }
-  charliecloud { includeConfig 'conf/charliecloud.config' }
+  charliecloud { charliecloud.enabled = true }
   singularity { singularity.enabled = true }
   docker { docker.enabled = true }
   podman { podman.enabled = true }
